# learned-qd

./: .gitignore  .ruff.toml  CITATION.cff  README.md  cma_es.py  lqd_checkpoints.ipynb  main_distill.py  main_eval.py  main_learn.py  pyproject.toml  requirements.txt
configs/: distill.yaml  eval.yaml  learn.yaml
configs/evo/: cma_es.yaml  dns.yaml  ga.yaml  lqd.yaml  me.yaml  ns.yaml  random.yaml
configs/meta_objective/: dominated_novelty_mean.yaml  fitness_max.yaml  novelty_mean.yaml  qd_1_mean.yaml  qd_2_mean.yaml  qd_3_mean.yaml  qd_4_mean.yaml  qd_dns.yaml  qd_grid.yaml  qd_max.yaml  qd_mean.yaml  qd_sum.yaml
configs/meta_objective_fn/: fitness_max.yaml  novelty_mean.yaml  qd.yaml
configs/meta_strategy/: cma_es.yaml  open_es.yaml  pgpe.yaml  sep_cma_es.yaml  snes.yaml
configs/optimizer/: adam.yaml  adamw.yaml  clipup.yaml  sgd.yaml
configs/schedule/: constant_schedule.yaml  exponential_decay.yaml  linear_schedule.yaml  warmup_cosine_decay_schedule.yaml
configs/task/: arm.yaml  bbob.yaml  brax.yaml  meta_bbob.yaml
learned_qd/evo/: evolution.py  genetic_algorithm.py  metrics.py
learned_qd/meta/: meta_evaluator.py  meta_evolution.py  meta_objective.py  meta_objective_qd.py
learned_qd/nn/: learned_fitness.py  learned_fitness_attention.py  (+2 more)
scripts/: eval_bbo.py  eval_bbo_grid.py  eval_bbo_heatmap.py  eval_robot.py  plot_bbo_bar.py  plot_bbo_grid.py  plot_bbo_heatmap.py  plot_bbo_line.py  plot_bbo_line_emergent_diversity.py  plot_bbo_pareto.py  plot_robot_ablation.py  plot_robot_line.py  plot_robot_line_agg.py  plot_robot_population.py  table_bbo.py
(+93 files in other folders)
